# ChangeLog for gnustep-apps/gworkspace
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/gnustep-apps/gworkspace/ChangeLog,v 1.30 2010/07/01 09:21:42 voyageur Exp $

*gworkspace-0.8.8 (01 Jul 2010)

  01 Jul 2010; Bernard Cafarelli <voyageur@gentoo.org>
  +gworkspace-0.8.8.ebuild:
  Version bump, EAPI3, disable GWMetadata for now (does not build)

*gworkspace-0.8.7 (09 Oct 2008)

  09 Oct 2008; Bernard Cafarelli <voyageur@gentoo.org>
  +gworkspace-0.8.7.ebuild:
  Version bump, update homepage. No poppler patch for now

  24 Nov 2007; Samuli Suominen <drac@gentoo.org> gworkspace-0.8.6.ebuild:
  amd64 stable wrt #195990

  16 Nov 2007; Bernard Cafarelli <voyageur@gentoo.org>
  files/gworkspace-0.8.6-rpath.patch:
  Fix rpath patch, thanks beandog

  08 Nov 2007; Bernard Cafarelli <voyageur@gentoo.org>
  -gworkspace-0.7.1.ebuild, gworkspace-0.8.6.ebuild:
  Remove old version, fix some quoting

  27 Oct 2007; nixnut <nixnut@gentoo.org> gworkspace-0.8.6.ebuild:
  Stable on ppc wrt bug 195990

  17 Oct 2007; Christian Faulhammer <opfer@gentoo.org>
  gworkspace-0.8.6.ebuild:
  stable x86, bug 195990

  11 Sep 2007; Bernard Cafarelli <voyageur@gentoo.org>
  gworkspace-0.7.1.ebuild:
  Dropped conditional depend on masked package, updated SRC_URI

*gworkspace-0.8.6 (10 Sep 2007)

  10 Sep 2007; Bernard Cafarelli <voyageur@gentoo.org>
  +files/gworkspace-0.8.6-popplerkit.patch,
  +files/gworkspace-0.8.6-rpath.patch,
  -files/seperate-desktop-recycler.patch, -gworkspace-0.8.2.ebuild,
  -gworkspace-0.8.3.ebuild, +gworkspace-0.8.6.ebuild:
  Version bump from the GNUstep overlay, remove old versions
  Also switched pdf depend on popplerkit instead of pdfkit

  05 Jan 2007; Diego Pettenò <flameeyes@gentoo.org>
  gworkspace-0.8.3.ebuild:
  Remove gnuconfig inherit.

*gworkspace-0.8.3 (05 Dec 2006)

  05 Dec 2006; Fabian Groffen <grobian@gentoo.org> +gworkspace-0.8.3.ebuild:
  Version bump, closes bug #145583
