@@ -1,10 +1,22 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA256
+
 AUX gworkspace-0.8.6-popplerkit.patch 11861 RMD160 2b0dddb70dfbcc26652556fee530e59554916156 SHA1 bc3bba15aaef7edb42b95087dcab5ac67f4b862d SHA256 eba9ddc0359b144e57d2e02344e79137cb35faf25345994d1832a7e37b619f5b
 AUX gworkspace-0.8.6-rpath.patch 2450 RMD160 f4363f4f1a78bbf83b3e2f662f901645e4d86913 SHA1 4877c3cf3dc65987ce85e5ead112a06517162108 SHA256 291d816737a4ec157084016154401d5e44a6649a1249e7a2c98e02a4d272d2d5
 DIST gworkspace-0.8.6.tar.gz 2394844 RMD160 72fc3a2f4bc5db616509ec6c30bc135aca2a8900 SHA1 19cf899f8c85585926c9449520e6f770710d7787 SHA256 50fff3595d6034223a6735822dd63121842d33f9e6d00f4197e5c8a9488365ea
 DIST gworkspace-0.8.7.tar.gz 3935841 RMD160 56360e68524d87d345b6345a47a6271fba964b18 SHA1 94bdf6eb4f20e7e4ab708fce864fef7e41567f9c SHA256 07658133c88bb0609ed153080fd414583ce7ecb3e50a893c7c813687e1e5abab
 DIST gworkspace-0.8.8.tar.gz 3607784 RMD160 ca9fd6858dc3c08b13a84f7e742d99825a7366b9 SHA1 c0e7b17d5d1a8736196f07e0b2c5407117658ee3 SHA256 b6c29acd51a39e77c5ac3d492399ae5732c69417766117bbce5e406d325c1d1f
+DIST gworkspace-0.9.0.tar.gz 3789219 RMD160 d892101f50603b29526aefd6ff0ed14be5b2632c SHA1 75cdef7c2d4d0a9db5209988a44ffa652f3d69fd SHA256 6655c1570db74dda8dc4f88159f8d251c5bee02da234abe61f35738bab7538fd
 EBUILD gworkspace-0.8.6.ebuild 1320 RMD160 f88ee64480ec1f7ca31d1e9950fc13ea64a4292a SHA1 7db01b206c1e5854fbf5920a9a121f0ef8de1882 SHA256 1e969627eea036b6cb399f64f4bd851805569be289caabf99bd27f928ee15e60
 EBUILD gworkspace-0.8.7.ebuild 976 RMD160 22124af293eabc9163faa221ae408f4adb6262e3 SHA1 f7d9960532829fb3385e0895cb0c0460782fd67b SHA256 a5c79563efc8d07d6331ffc4515cfe39844462c2fe05018acd0b1efe1f8120dc
 EBUILD gworkspace-0.8.8.ebuild 944 RMD160 71ed3882e189afe82dd860e75ded6a14caee259d SHA1 0f1013469f2dc196e2c5c826f9185a537ff76c1f SHA256 0137249324f043f36e32d2637e1ff64e2a8e1071aad5e115dc3f885186b865d2
-MISC ChangeLog 6407 RMD160 6581d4f7da920b8477af0d5cde9dcf48190ac546 SHA1 392902f2c6561a05130a545fc302ce546464d0ab SHA256 9bad6057c812a212ba7544da4f57710156cf8ed887f002019161087a60e54291
+EBUILD gworkspace-0.9.0.ebuild 944 RMD160 1bd0f45456cb438ae7e7b79c729f5a83ec250c26 SHA1 38a7fa04d92884153105183fe28b522e8965ba38 SHA256 452059e40530d99aa4c5bdd42e3ab10612f4bcfb8d23570d9adb9647856696f8
+MISC ChangeLog 6558 RMD160 7eb0f69deb4861a0395214fded57e7e36c6a3f4c SHA1 de9ce6effd6fbe285841f3ac4dd5ea175164590d SHA256 38b539e882da09ac19c57638081e6f72f831ed2a8afe8247ac317300b8f5b4b4
 MISC metadata.xml 391 RMD160 902157d53596d3f5938e2dd0a6ffa068233f77d3 SHA1 6f31006e6f6b6d83d45113e5b1413bb61a000f0b SHA256 406c4ee08f8ef51e0f9d7a826c3024b8e080094ae4c7e9df093f91355609365a
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.18 (GNU/Linux)
+
+iF4EAREIAAYFAk60AhgACgkQFYEBGcdFJfKPzwEAlnEZWrAuwa7/xmiTNnAFzose
+DTx89tZ2ZGEpFj84goEBAKqolI392crmKDa32qbwWUylD1iikYk/6ZfGmI4HXehT
+=3L41
+-----END PGP SIGNATURE-----
