@@ -1,6 +1,12 @@
 # ChangeLog for gnustep-apps/gworkspace
-# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/gnustep-apps/gworkspace/ChangeLog,v 1.30 2010/07/01 09:21:42 voyageur Exp $
+# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/gnustep-apps/gworkspace/ChangeLog,v 1.31 2011/11/04 15:17:32 voyageur Exp $
+
+*gworkspace-0.9.0 (04 Nov 2011)
+
+  04 Nov 2011; Bernard Cafarelli <voyageur@gentoo.org>
+  +gworkspace-0.9.0.ebuild:
+  Version bump. Fixes bug #387245
 
 *gworkspace-0.8.8 (01 Jul 2010)
 
